src/objects/Batch__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Shows the different Assets types</description>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture &amp; Fittings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tangible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Dates delivered</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Date of purchase</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>Computer Vision Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eftek Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fenix International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Computer Industries Ltd (NCR)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_No__c</fullName>
        <description>Quantity purchased</description>
        <label>Total No.</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>